--- a/assets/header.css
+++ b/assets/header.css
@@ -71,4 +71,11 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .nav-links {
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in-out;
+  }
+}
+
 /*# sourceMappingURL=header.css.map */
