--- a/snippets/style-tag.liquid
+++ b/snippets/style-tag.liquid
@@ -1,2 +1,2 @@
 {% render 'style-variables' %}
-{% comment %} {{ 'common.css' | asset_url | stylesheet_tag }} {% endcomment %}
+{{ 'bootstrap.min.css' | asset_url | stylesheet_tag }}
