--- a/src/header.scss
+++ b/src/header.scss
@@ -82,3 +82,9 @@
     }
   }
 }
+@media screen and (max-width: 768px) {
+  .nav-links {
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in-out;
+  }
+}
