in 404 page content add

--- a/sections/template-404.liquid
+++ b/sections/template-404.liquid
@@ -1,14 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      {{ section.settings.title }}
+      <h1>
+        {{ section.settings.title }}</h1>
+      <h3>
+        {% if section.settings.button_url == blank %}
+          {% assign shop_url = shop.secure_url %}
+        {% else %}
+          {% assign shop_url = section.settings.button_url %}
+        {% endif %}
+      </h3>
 
-      {% if section.settings.button_url == blank %}
-        {% assign shop_url = shop.secure_url %}
-      {% else %}
-        {% assign shop_url = section.settings.button_url %}
-      {% endif %}
-      <a href="{{ shop_url }}" class="px-4 inline py-2 text-base font-medium shadow bg-green-600 hover:bg-green-800 text-white">{{ section.settings.button_label }}</a>
+      <a href="{{ shop_url }}" class="btn btn-dark">{{ section.settings.button_label }}</a>
     </div>
   </div>
 </div>
