--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,8 @@
+
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" href="#">{{ shop.name }}</a>
 
     <button
