--- a/sections/template-404.liquid
+++ b/sections/template-404.liquid
@@ -5,17 +5,24 @@
         <h1>
           {{ section.settings.title }}</h1>
         <h3>
+          {{ section.settings.subtext_title }}
+
+        </h3>
+        <div>
           {% if section.settings.button_url == blank %}
             {% assign shop_url = shop.secure_url %}
           {% else %}
             {% assign shop_url = section.settings.button_url %}
           {% endif %}
-        </h3>
-        <a href="{{ shop_url }}" class="btn btn-dark">{{ section.settings.button_label }}</a>
+          <a href="{{ shop_url }}" class="btn btn-dark">{{ section.settings.button_label }}</a>
+        </div>
+
       </div>
     </div>
   </div>
 </section>
+
+
 
 {% schema %}
   {
