--- a/sections/template-list-collection.liquid
+++ b/sections/template-list-collection.liquid
@@ -1,24 +1,34 @@
-<div class="px-4 py-8">
-  <a href="{{ routes.collections_url }}" class="text-base text-gray-500 hover:underline text-center block my-4">Go back to collections</a>
-  {% paginate collection.products by section.settings.number_of_products_per_page %}
-    <h1 class="text-3xl text-center">{{ collection.title }}</h1>
+<section class="bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
 
-    <div class="max-w-6xl mx-auto">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-        {% for product in collection.products %}
-          {% render 'product-card'
-            , product_product: product %}
-        {% else %}
-          <p>There are no products inside of this collection</p>
-        {% endfor %}
+        <a href="{{ routes.collections_url }}" class="text-base text-gray-500 hover:underline text-center block my-4">Go back to collections</a>
+        {% paginate collection.products by section.settings.number_of_products_per_page %}
+          <h1 class="text-3xl text-center">{{ collection.title }}</h1>
+
+          <div class="max-w-6xl mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+              {% for product in collection.products %}
+                {% render 'product-card'
+                  , product_product: product %}
+              {% else %}
+                <p>There are no products inside of this collection</p>
+              {% endfor %}
+            </div>
+          </div>
+
+
+          {% comment %} {% render 'pagination'
+                                                                      , pagination: paginate %} {% endcomment %}
+        {% endpaginate %}
+
+
       </div>
     </div>
+  </div>
+</section>
 
-
-    {% comment %} {% render 'pagination'
-                  , pagination: paginate %} {% endcomment %}
-  {% endpaginate %}
-</div>
 
 {% schema %}
   {
