--- a/sections/template-list-collection.liquid
+++ b/sections/template-list-collection.liquid
@@ -1,44 +1,54 @@
-<section class="bg-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
+<div class="flex flex-col items-center my-8">
+  <h1 class="text-3xl font-medium">{{ section.settings.title }}</h1>
 
-        <a href="{{ routes.collections_url }}" class="text-base text-gray-500 hover:underline text-center block my-4">Go back to collections</a>
-        {% paginate collection.products by section.settings.number_of_products_per_page %}
-          <h1 class="text-3xl text-center">{{ collection.title }}</h1>
+  <div class="max-w-6xl mx-auto my-3">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
+      {% for collection in collections %}
+        {% if collection.all_products_count > 0 %}
+          <div class="w-full py-6 px-3">
+            <div class="border bg-white overflow-hidden">
+              <a href="{{ collection.url }}">
+                <div class="h-80 overflow-hidden">
+                  {% if collection.featured_image != blank %}
+                    {% assign collection_image = collection.featured_image %}
+                  {% else %}
+                    {% assign collection_image = collection.products.first.image %}
+                  {% endif %}
 
-          <div class="max-w-6xl mx-auto">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-              {% for product in collection.products %}
-                {% render 'product-card'
-                  , product_product: product %}
-              {% else %}
-                <p>There are no products inside of this collection</p>
-              {% endfor %}
+                  <img
+                    class="w-full h-full object-cover transition duration-1000 ease-in-out transform hover:scale-105"
+                    src="{{  collection_image | img_url: '300x' }}"
+                    srcset="{% render 'bgset', image:  collection_image %}"
+                    sizes="(min-width: 981px) 50vw, 100vw"
+                    width="300"
+                    height="{{ 300 | divided_by:  collection_image.aspect_ratio | round }}"
+                    alt="{{  collection_image.alt }}" />
+
+
+                </div>
+              </a>
+
+              <div class="p-4 bg-gray-100">
+                <h1 class="text-xl">{{ collection.title }}</h1>
+              </div>
             </div>
           </div>
-
-
-          {% comment %} {% render 'pagination'
-                                                                      , pagination: paginate %} {% endcomment %}
-        {% endpaginate %}
-
-
-      </div>
+        {% endif %}
+      {% endfor %}
     </div>
   </div>
-</section>
+</div>
 
 
 {% schema %}
   {
-    "name": "Template Collection",
+    "name": "Template List Collections",
     "settings": [
       {
-        "type": "number",
-        "id": "number_of_products_per_page",
-        "default": 6,
-        "label": "Number of products per page"
+        "type": "text",
+        "id": "title",
+        "default": "Collections",
+        "label": "Title"
       }
     ]
   }
