--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -1,32 +1,58 @@
-<div class="w-full py-6 px-3">
-    <div class="border bg-white shadow-lg rounded-lg overflow-hidden">
-        <a href="{{ product_product.url }}">
-            {% if product_product.featured_image %}
-                <div class="h-80 overflow-hidden">
+<div class="col-sm-6 col-md-3 col-lg-3">
+    <div class="product">
+        <figure class="product__image">
+            <a href="{{ product_product.url }}">
+                {% if product_product.featured_image %}
+                  
+                    <img
+                    class="w-full h-full object-cover transition duration-1000 ease-in-out hover:scale-105 transform"
+                    src="{{ product_product.featured_image | img_url: '300x' }}"
+                    srcset="{% render 'bgset', image: product_product.featured_image %}"
+                    sizes="(min-width: 981px) 50vw, 100vw"
+                    width="300"
+                    height="{{ 300 | divided_by: product_product.featured_image.aspect_ratio | round }}"
+                    alt="{{ product_product.featured_image.alt }}" />                
+                     
+                   
+                    
+                {% else %}
+                    {{ 'product-1' | placeholder_svg_tag: 'w-full h-full object-cover bg-gray-100' }}
+                {% endif %}
+            </a>
+            {% comment %} <a href="">
+              <img src="/assets/images/product-1.jpg" alt="" />
+              <img src="/assets/images/product-1-2.jpg" alt="" />
+            </a> {% endcomment %}
+            <div class="product__hover">
+              <ul class="product__hover-list">
+                <li>
+                  <a href="#" title="Quick View"
+                    ><span><i class="bx bx-plus"></i></span
+                  ></a>
+                </li>
+                <li>
+                  <a href="#" title="Add to cart"
+                    ><span><i class="bx bx-cart"></i></span
+                  ></a>
+                </li>
+              </ul>
+            </div>
+            <div class="product__like">
+              <a href="#" title="Add Wishlist"
+                ><i class="bx bx-heart bx-sm"></i
+              ></a>
+            </div>
+          </figure>
+          <div class="product__meta">
+            <span>{{ product_product.vendor }}</span>
+            <div class="product__meta-title">
+              <h2><a href="{{ product_product.url }}">{{ product_product.title }}</a></h2>
+            </div>
+            <div class="product__meta-price">
+              <span>{{ product_product.price | money }}</span><a href="#">Add to cart</a>
+            </div>
+          </div>
 
-                <img
-                class="w-full h-full object-cover transition duration-1000 ease-in-out hover:scale-105 transform"
-                src="{{ product_product.featured_image | img_url: '300x' }}"
-                srcset="{% render 'bgset', image: product_product.featured_image %}"
-                sizes="(min-width: 981px) 50vw, 100vw"
-                width="300"
-                height="{{ 300 | divided_by: product_product.featured_image.aspect_ratio | round }}"
-                alt="{{ product_product.featured_image.alt }}" />                
-                 
-                </div>
-                
-            {% else %}
-                {{ 'product-1' | placeholder_svg_tag: 'w-full h-full object-cover bg-gray-100' }}
-            {% endif %}
-        </a>
-        
-        <div class="flex flex-col p-4">
-            <span class="text-sm text-gray-400">{{ product_product.vendor }}</span>
-
-            <a href="{{ product_product.url }}" class="text-gray-700 uppercase font-medium">{{ product_product.title }}</a>
-
-            <p class="text-gray-500">{{ product_product.price | money }}</p>
-        </div>
-        
     </div>
+   
 </div>
