--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -1,12 +1,9 @@
 {% case media.media_type %}
     {% when 'image' %}
         <img
-              class="w-full h-full object-cover "
-              src="{{ media | img_url: '300x' }}"
-              srcset="{% render 'bgset', image: media %}"
-              sizes="(min-width: 981px) 50vw, 100vw"
-              width="300"
-              height="{{ 300 | divided_by: media.aspect_ratio | round }}"
+              c
+              src="{{ media | img_url: '450x450' }}"             
+              sizes="(min-width: 981px) 50vw, 100vw"             
               alt="{{ media.preview_image.alt }}" />
     {% when 'external_video' %}
         {{ media |  external_video_tag: class:'w-full h-80 object-cover' }}
