--- a/assets/theme.css
+++ b/assets/theme.css
@@ -961,14 +961,14 @@ input {
 }
 
 .hero {
-  padding-top: 8.75rem;
+  padding-top: 6.75rem;
   padding-bottom: 3.7rem;
 }
 
 section {
   position: relative;
   margin: 0 auto;
-  padding: 6.25rem 0;
+  padding: 4rem 0;
 }
 
 .pt-0 {
@@ -977,6 +977,10 @@ section {
 
 .product {
   margin-bottom: 1.8rem;
+  padding: 1rem;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1019607843);
 }
 .product__image {
   position: relative;
