--- a/sections/template-list-collection.liquid
+++ b/sections/template-list-collection.liquid
@@ -1,43 +1,58 @@
-<div class="flex flex-col items-center my-8">
-  <h1 class="text-3xl font-medium">{{ section.settings.title }}</h1>
+<section class="hero bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col text-center">
+        <h1 class="text-3xl text-center">{{ section.settings.title }}</h1>
+      </div>
+    </div>
+  </div>
+</section>
 
-  <div class="max-w-6xl mx-auto my-3">
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
+<section class="pt-0 bg-light">
+  <div class="container">
+    <div class="row">
       {% for collection in collections %}
         {% if collection.all_products_count > 0 %}
-          <div class="w-full py-6 px-3">
-            <div class="border bg-white overflow-hidden">
-              <a href="{{ collection.url }}">
-                <div class="h-80 overflow-hidden">
-                  {% if collection.featured_image != blank %}
-                    {% assign collection_image = collection.featured_image %}
-                  {% else %}
-                    {% assign collection_image = collection.products.first.image %}
-                  {% endif %}
+          <div class="col-sm-6 col-md-3 col-lg-3">
+            <div class="product">
+              <figure class="product__image">
+                <a href="{{ collection.url }}">
+                  <div class="h-80 overflow-hidden">
+                    {% if collection.featured_image != blank %}
+                      {% assign collection_image = collection.featured_image %}
+                    {% else %}
+                      {% assign collection_image = collection.products.first.image %}
+                    {% endif %}
 
-                  <img
-                    class="w-full h-full object-cover transition duration-1000 ease-in-out transform hover:scale-105"
-                    src="{{  collection_image | img_url: '300x' }}"
-                    srcset="{% render 'bgset', image:  collection_image %}"
-                    sizes="(min-width: 981px) 50vw, 100vw"
-                    width="300"
-                    height="{{ 300 | divided_by:  collection_image.aspect_ratio | round }}"
-                    alt="{{  collection_image.alt }}" />
+                    <img
+                      class="w-full h-full object-cover transition duration-1000 ease-in-out transform hover:scale-105"
+                      src="{{  collection_image | img_url: '900x900' }}"
+                      srcset="{% render 'bgset', image:  collection_image %}"
+                      sizes="(min-width: 981px) 50vw, 100vw"
+                      width="300"
+                      height="{{ 300 | divided_by:  collection_image.aspect_ratio | round }}"
+                      alt="{{  collection_image.alt }}" />
 
 
+                  </div>
+                </a>
+              </figure>
+              <div class="product__meta">
+                <div class="product__meta-title">
+                  <h2>
+                    <a href="{{ collection.url }}">{{ collection.title }}</a>
+                  </h2>
                 </div>
-              </a>
-
-              <div class="p-4 bg-gray-100">
-                <h1 class="text-xl">{{ collection.title }}</h1>
               </div>
             </div>
+
+
           </div>
         {% endif %}
       {% endfor %}
     </div>
   </div>
-</div>
+</section>
 
 
 {% schema %}
