--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -4,7 +4,7 @@
     {% paginate blog.articles by section.settings.number_of_blog_posts %}
       <div class="row">
         {% for article in blog.articles %}
-          <div class="w-full py-6 px-3">
+          <div class="col-12 col-md-4 col-lg-3">
             <div class="bg-white shadow-xl rounded-lg overflow-hidden">
               {% if article.image %}
                 <a href="{{ article.url }}">
