--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,6 +14,9 @@
 
     
     {{ 'theme.css' | asset_url | stylesheet_tag }}
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+ 
   
     {% comment %} {{ 'main.js'  | asset_url | script_tag }} {% endcomment %}
 
