--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,16 +1,17 @@
-<nav role="navigation">
-  <ul>
+<nav role="navigation" class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+  <ul class="navbar-nav">
     {%- for link in linklists.main-menu.links -%}
-      <li>
-        <a href="{{ link.url }}" {% if link.active %}aria-current="page"{% endif %}>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ link.url }}" {% if link.active %}aria-current="page"{% endif %}>
           {{ link.title }}
         </a>
 
         {%- if link.links != blank -%}
-          <ul>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown"></ul>>
             {%- for child_link in link.links -%}
               <li>
-                <a href="{{ child_link.url }}" {% if child_link.active %}aria-current="page"{% endif %}>
+                <a href="{{ child_link.url }}" {% if child_link.active %}aria-current="page"{% endif %} class="dropdown-item">
                   {{ child_link.title }}
                 </a>
 
@@ -34,4 +35,5 @@
       </li>
     {%- endfor -%}
   </ul>
+  </div>
 </nav>
