--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,6 +1,14 @@
-<nav role="navigation" class="navbar navbar-expand-lg bg-body-tertiary">
+<nav role="navigation" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-  <ul class="navbar-nav">
+        <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     {%- for link in linklists.main-menu.links -%}
       <li class="nav-item">
         <a class="nav-link" href="{{ link.url }}" {% if link.active %}aria-current="page"{% endif %}>
@@ -35,5 +43,6 @@
       </li>
     {%- endfor -%}
   </ul>
+  </div>
   </div>
 </nav>
