--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,5 @@
 <nav role="navigation" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container">
         <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,13 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     {%- for link in linklists.main-menu.links -%}
-      <li class="nav-item">
+      <li class="nav-item a">
         <a class="nav-link" href="{{ link.url }}" {% if link.active %}aria-current="page"{% endif %}>
           {{ link.title }}
         </a>
 
         {%- if link.links != blank -%}
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown"></ul>>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown"></ul>
             {%- for child_link in link.links -%}
               <li>
                 <a href="{{ child_link.url }}" {% if child_link.active %}aria-current="page"{% endif %} class="dropdown-item">
